# api-sync-generator

./: .gitignore  README.md  pyproject.toml  test_app.py  test_generator.py
.github/workflows/: ci-cd.yml
api_sync_generator/: __init__.py  cli.py  config.py  extractor.py  generator.py  parser.py  ui.py  watcher.py
api_sync_generator/templates/: API_INTEGRATION.md.j2  QUICKSTART.md.j2  api.ts.j2  hooks.ts.j2  server_actions.ts.j2  types.ts.j2  zod.ts.j2
